<resources>
    <string name="app_name">FAN Native</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="text_sign_in">Sign In</string>
    <string name="text_btn_sign_in">Login</string>
    <string name="text_sign_up_title">Sign Up</string>
    <string name="text_forgot_title">Forgot Password</string>
    <string name="text_btn_forgot">Send</string>
    <string name="text_btn_sign_up">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="still_don_t_have_account">Still don\'t have account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
</resources>
