<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_auth_background"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_auth"
        android:layout_marginTop="@dimen/margin_auth_title"
        android:fontFamily="sans-serif-black"
        android:text="@string/text_sign_up_title"
        android:textColor="@color/colorTextORIcon"
        android:textSize="@dimen/text_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_auth"
        android:layout_marginTop="@dimen/margin_auth_email_field"
        android:layout_marginEnd="@dimen/margin_auth"
        android:drawablePadding="@dimen/padding_field"
        android:background="@drawable/bg_auth_field"
        android:fontFamily="serif"
        android:hint="Name"
        android:inputType="textPersonName"
        android:padding="@dimen/padding_field"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="@dimen/text_body_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_bg"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_auth"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_auth"
        android:background="@drawable/bg_auth_field"
        android:drawablePadding="@dimen/padding_field"
        android:fontFamily="serif"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_field"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="@dimen/text_body_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/laypass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_auth"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_auth_field"
            android:drawablePadding="@dimen/padding_field"
            android:fontFamily="serif"
            android:hint="Create Password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_field"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="@dimen/text_body_size"
            tools:ignore="MissingConstraints" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/showPass"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:alpha=".5"
            android:padding="5dp"
            android:src="@drawable/invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/laypass"
            app:layout_constraintTop_toTopOf="@+id/password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/laypassconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_auth"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/laypass">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_auth_field"
            android:drawablePadding="@dimen/padding_field"
            android:fontFamily="serif"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_field"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="@dimen/text_body_size"
            tools:ignore="MissingConstraints" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/showPassConfirm"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:alpha=".5"
            android:padding="5dp"
            android:src="@drawable/invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/laypassconfirm"
            app:layout_constraintTop_toTopOf="@+id/confirm_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_auth"
        android:layout_marginTop="@dimen/margin_privacy_policy"
        android:layout_marginEnd="@dimen/margin_auth"
        android:background="@drawable/bg_auth_btn"
        android:fontFamily="sans-serif-black"
        android:text="@string/text_btn_sign_up"
        android:textColor="@color/colorTextORIcon"
        android:textSize="@dimen/text_btn_size"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/laypassconfirm" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorAccentBlueDark_50"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/signin_textview"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signin_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/sign_in"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <ProgressBar
        android:id="@+id/pb1"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        tools:targetApi="P" />


</androidx.constraintlayout.widget.ConstraintLayout>